[package]
name = "esp32-led"
version = "0.1.0"
authors = ["rfhold <robert@robhold.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-hal = { version = "0.40.1", esp32c3 = true }
smart-leds = "0.3.0"
smart-leds-trait = "0.2.1"
num = "0.4.0"
rgb = "0.8.36"
bno055 = "0.3.3"

[build-dependencies]
embuild = "0.30.4"
