[package]
name = "esp32-led"
version = "0.1.0"
authors = ["rfhold <robert@robhold.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.33.0", features = ["binstart"] }
esp-idf-hal = { version = "0.41.0", esp32c3 = true }
esp-idf-svc = { version = "0.46.0" }
smart-leds = "0.3.0"
num = "0.4.0"
rgb = "0.8.36"
bno055 = "0.3.3"
ws2812-esp32-rmt-driver = "0.5.0"

[build-dependencies]
embuild = "0.30.4"
